--- a/lightdm-slick-greeter.conf
+++ b/lightdm-slick-greeter.conf
@@ -3,7 +3,7 @@
 # Available configuration options listed below.
 #
 # activate-numlock=Whether to activate numlock. This features requires the installation of numlockx. (true or false)
-# background=Background file to use, either an image path or a color (e.g. #772953)
+background=/usr/share/apocos/background.jpg
 # background-color=Background color (e.g. #772953), set before wallpaper is seen
 # draw-user-backgrounds=Whether to draw user backgrounds (true or false)
 # draw-grid=Whether to draw an overlay grid (true or false)
